--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-query": "^3.39.1"
+    "react-query": "^3.39.1",
+    "recharts": "^2.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
