--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "loadash": "^1.0.0",
     "react": "^18.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.1",
     "recharts": "^2.1.12"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.0",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
